--- a/public/css/less/mobile.less
+++ b/public/css/less/mobile.less
@@ -1,4 +1,6 @@
-@import "mobile/1024";
-@import "mobile/768";
-@import "mobile/425";
-@import "mobile/320";
+@import "mobile/header";
+@import "mobile/index";
+@import "mobile/how-to-connect";
+@import "mobile/tarifs";
+@import "mobile/about";
+@import "mobile/footer";
