--- a/public/css/less/include/core.less
+++ b/public/css/less/include/core.less
@@ -6,15 +6,35 @@
 }
 body{
   overflow-x: hidden;
+  background: @dark-green;
 }
 .wrapper {
   width: 100%;
   margin: 0 auto;
-}
 
+}
+.index .wrap-1200{
+  background: none;
+  box-shadow: none !important;
+}
 .wrap-1200 {
   max-width: 1200px;
   margin: 0 auto;
+  background: #ffffff;
+  box-shadow: 0 -35px 55px 25px rgba(0, 86, 0, 0.25);
+  &:last-child{
+    box-shadow: 0 -35px 55px 25px rgba(0, 86, 0, 0.25);
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+  }
+  &:nth-child(2){
+    box-shadow: 0 -35px 55px 25px rgba(0, 86, 0, 0.25);
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+  }
+}
+.footer .wrap-1200{
+  box-shadow: none !important;
 }
 
 // Система частиц ====================
@@ -65,6 +85,7 @@ body{
   li.plus-item {
     display: inline-block;
     position: relative;
+    opacity: 0;
     transition: all 1s;
     .wrap {
       position: relative;
@@ -76,6 +97,15 @@ body{
     &.modem {
       top: -165px;
       left: 134px;
+      .absolute{
+        position: absolute;
+        transition: all 0.5s;
+        &.item-1{
+          top:0;
+          transform: scale(0);
+
+        }
+      }
       p.plus-text {
         color: #ffffff;
         font-size: 20px;
@@ -115,6 +145,19 @@ body{
     &.media {
       top: -220px;
       left: 366px;
+      .absolute{
+        position: absolute;
+        transition: all 0.5s;
+        &.item-1{
+          top: -10px;
+          transform: scale(0);
+          ;
+        }
+        &.item-2{
+          top: -20px;
+          transform: scale(0);
+        }
+      }
       p.plus-text {
         color: #ffffff;
         font-size: 20px;
@@ -131,6 +174,7 @@ body{
 
 .tarifs {
   padding-bottom: 80px;
+  background: #ffffff;
   h2.title-gray {
     text-align: center;
     font-size: 60px;
@@ -363,7 +407,6 @@ p.button-row {
   position: relative;
   background: @dark-green;
   max-height: 883px;
-  position: relative;
   .wrap-1200 {
     background: url(../img/wifi-ind.png) no-repeat center 230px;
     padding-bottom: 155px;
@@ -618,6 +661,9 @@ li.comment-item {
       font-size: 16px;
       line-height: 24px;
       padding-bottom: 20px;
+      &:last-child{
+        padding-bottom: 0;
+      }
     }
   }
   span.comment-speed {
