--- a/public/css/less/include/pages/about.less
+++ b/public/css/less/include/pages/about.less
@@ -1,7 +1,10 @@
 .about-company{
   margin: 0 auto;
   max-width: 1000px;
+  margin-bottom: 100px;
   .title{
+    margin-top: 0;
+    padding-top: 60px;
     font-size: 60px;
     font-family: @UbuntuBold;
     font-weight: normal;
