--- a/public/css/less/include/pages/how-to-connect.less
+++ b/public/css/less/include/pages/how-to-connect.less
@@ -3,6 +3,8 @@
     text-align: center;
     color: #333333;
     font-size: 60px;
+    margin-top: 0;
+    padding-top: 60px;
     font-family: @UbuntuBold;
     font-weight: normal;
     padding-bottom: 0;
@@ -34,7 +36,7 @@
         justify-content: flex-start;
         .image-wrap {
           position: relative;
-          svg {
+          img, svg {
             position: relative;
           }
           background: url(../img/step_circle.PNG) no-repeat 0px 70px;
@@ -54,7 +56,7 @@
       &:nth-child(3) {
         .image-wrap {
           position: relative;
-          svg {
+          img,svg {
             position: relative;
             left: -50px;
             top: 5px;
