--- a/public/css/less/include/pages/tarfis.less
+++ b/public/css/less/include/pages/tarfis.less
@@ -2,7 +2,8 @@
   h1.title {
     color: #333333;
     text-align: center;
-    margin: 35px auto 0;
+    margin: 0 auto 0;
+    padding-top: 35px;
     font-size: 60px;
     line-height: 72px;
     font-family: @UbuntuBold;
