fix the adaptive

--- a/public/css/less/include/header.less
+++ b/public/css/less/include/header.less
@@ -36,8 +36,14 @@ header.page-head{
     padding: 40px 90px 55px 60px;
     justify-content: space-between;
     background: #ffffff;
-
     z-index: 0;
+    .logo{
+      img{
+        &:last-child{
+          display: none;
+        }
+      }
+    }
     .inf-block {
       display: flex;
       justify-content: space-between;
