--- a/public/css/less/mobile.less
+++ b/public/css/less/mobile.less
@@ -1,3 +1,5 @@
+@import "include/variable";
+@import "include/mixins";
 @import "mobile/header";
 @import "mobile/index";
 @import "mobile/how-to-connect";
