--- a/public/css/less/mobile/footer.less
+++ b/public/css/less/mobile/footer.less
@@ -52,7 +52,11 @@
         &:last-child {
           justify-content: center;
           flex-direction: column;
+          padding-top: 0;
           .col-1-2 {
+            &:first-child{
+              padding-bottom: 30px;
+            }
             &.mail-icon {
               &:first-child {
                 &:after {
