--- a/public/css/less/mobile/how-to-connect.less
+++ b/public/css/less/mobile/how-to-connect.less
@@ -1,3 +1,19 @@
+@media screen and (max-width: 1000px) and (min-width: 760px) {
+  .how-to-connect {
+    .step-block {
+      .step-item, .step-item:nth-child(1),.step-item:nth-child(2),.step-item:nth-child(3){
+        justify-content: center;
+      }
+      .step-item:nth-child(2){
+        .step-info-block{
+          top: 10px;
+          left: 65px;
+        }
+      }
+    }
+  }
+}
+
 @media screen and (max-width: 760px) {
   .how-to-connect {
     .page-title {
@@ -175,6 +191,7 @@
     .page-title {
       font-size: 32px;
       line-height: 40px;
+      padding: 60px 20px 0;
     }
     .sub-title {
     }
