--- a/public/css/less/include/core.less
+++ b/public/css/less/include/core.less
@@ -139,6 +139,7 @@ body{
         top: -110px;
         position: relative;
         max-width: 160px;
+        line-height: 30px;
         left: 225px;
       }
     }
@@ -163,6 +164,7 @@ body{
         font-size: 20px;
         font-family: @Ubuntu;
         top: -15px;
+        line-height: 30px;
         position: relative;
         max-width: 161px;
         left: 95px;
