--- a/public/css/less/include/pages/tarfis.less
+++ b/public/css/less/include/pages/tarfis.less
@@ -67,6 +67,9 @@
   max-width: 980px;
   margin: 50px auto 0;
   .tarif-category-block {
+    &:last-child{
+      padding-bottom: 30px;
+    }
     padding-bottom: 90px;
     .category-name {
       color: #333333;
@@ -366,7 +369,7 @@ p.button-row {
   margin: 60px 0 100px;
   padding-top: 40px;
   background: url(../img/steps_free_connect.png) no-repeat center 20px;
-  padding-bottom: 60px;
+  padding-bottom: 160px;
 
   .title {
     margin: 0 auto;
