--- a/public/css/less/mobile/header.less
+++ b/public/css/less/mobile/header.less
@@ -1,18 +1,19 @@
-@media screen and (max-width: 1200px){
+@media screen and (max-width: 1200px) {
   header.page-head.index-page, header.page-head {
     margin-left: 0;
     position: relative;
-    .info-row{
+    .info-row {
       z-index: 5;
     }
-    nav.main-menu{
+    nav.main-menu {
       width: 100%;
       position: relative;
-      top:-2px;
+      top: -2px;
       left: 0;
     }
   }
 }
+
 @media screen and (max-width: 1100px) {
   header.page-head, header.page-head.index-page {
     .info-row {
@@ -26,12 +27,12 @@
     }
   }
 }
+
 @media screen and (max-width: 1000px) {
   header.page-head, header.page-head.index-page {
     margin-left: 0;
     width: 100%;
     padding-left: 0;
-    padding-bottom: 30px;
     .info-row {
       padding: 30px 20px 60px;
       .connect-item {
@@ -44,20 +45,70 @@
     }
   }
 }
+
 @media screen and (max-width: 900px) {
-  header.page-head.index-page,header.page-head {
+  header.page-head.index-page, header.page-head {
 
     .info-row {
       flex-wrap: wrap;
       padding-left: 60px;
-      justify-content:space-between;
+      justify-content: space-between;
       div.logo {
         width: 100%;
         text-align: center;
+          img{
+            &:last-child{
+              display: inline-block;
+            }
+            &:first-child{
+              display: none;
+            }
+          }
       }
     }
   }
 }
+
+@media screen and (max-width: 900px ) and (min-width: 720px) {
+  header.page-head.index-page, header.page-head {
+
+    .info-row {
+      padding: 40px 20px 30px;
+      .logo{
+        padding: 0 55px 0 10px;
+      }
+      .inf-block {
+        justify-content: center;
+        padding-top:10px;
+        width: 100%;
+        .phone{
+          margin-right: 0;
+        }
+        .consult{
+          padding-top: 29px;
+          padding: 29px 30px 0;
+          .icon{
+            display: none;
+          }
+        }
+        .connect {
+          .link {
+            .link(@link-color, @link-border, @hover-color, @hover-border);
+            margin-top: 38px;
+            margin-left: 0px;
+            position: relative;
+            display: inline-block;
+            vertical-align: top;
+            font-size: 16px;
+            top: -13px;
+            font-family: @Ubuntu;
+          }
+        }
+      }
+    }
+  }
+}
+
 @media screen and (max-width: 720px) {
   header.page-head.index-page {
     display: flex;
@@ -184,7 +235,7 @@
           padding: 40px 0;
           background: #39a651;
           display: none;
-          z-index: 2;
+          z-index: 6;
           li.popup-menu-item {
             width: 100%;
             a.menu-link {
