--- a/public/css/less/mobile/tarifs.less
+++ b/public/css/less/mobile/tarifs.less
@@ -9,6 +9,7 @@
       font-family: UbuntuBold;
       font-weight: normal;
       max-width: 800px;
+      padding: 0 20px;
       margin-bottom: 50px;
     }
     .green-block {
@@ -229,10 +230,12 @@
         }
       }
     }
+    .plus-block ~ .business-connect-item{
+      margin-top: 0;
+    }
     .business-connect-item {
       max-width: 980px;
       margin: 50px auto 0;
-
       .tarif-category-block {
         margin: 0 40px;
 
