--- a/public/css/less/include/core.less
+++ b/public/css/less/include/core.less
@@ -585,8 +585,10 @@ ul.icons-list {
 
 .comments-block {
   background: @dark-green;
-  padding-bottom: 120px;
+  padding-bottom: 100px;
   padding-top: 180px;
+  .wrap-1200{
+  }
   .title {
     padding-top: 60px;
     padding-bottom: 20px;
